--- a/lista02_estruturasDecisao/ex2_media2/index.html
+++ b/lista02_estruturasDecisao/ex2_media2/index.html
@@ -29,6 +29,6 @@
             <span id="result">0</span>
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
-		<script src="./media.js"></script>
+		<script src="/lista02_estruturasDecisao/ex2_media2/ex2_media2.js"></script>
 	</body>
 </html>
