--- a/lista02_estruturasDecisao/ex4_multiplo/index.html
+++ b/lista02_estruturasDecisao/ex4_multiplo/index.html
@@ -29,6 +29,6 @@
             <span id="result">0</span>
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
-		<script src="./multiplo.js"></script>
+		<script src="./ex4_multiplo.js"></script>
 	</body>
 </html>
