--- a/lista02_estruturasDecisao/ex5_imparPar/index.html
+++ b/lista02_estruturasDecisao/ex5_imparPar/index.html
@@ -27,6 +27,6 @@
             <span id="result">0</span>
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
-		<script src="./imparPar.js"></script>
+		<script src="./ex_imparPar.js"></script>
 	</body>
 </html>
