--- a/lista03_estruturasRepeticao/ex4_primo/index.html
+++ b/lista03_estruturasRepeticao/ex4_primo/index.html
@@ -27,6 +27,6 @@
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
 		<span id="result">Resultado: </span>
-		<script src="./primo.js"></script>
+		<script src="./ex4_primo.js"></script>
 	</body>
 </html>
