--- a/lista02_estruturasDecisao/ex3_maiorMenor/index.html
+++ b/lista02_estruturasDecisao/ex3_maiorMenor/index.html
@@ -29,6 +29,6 @@
             <span id="result">0</span>
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
-		<script src="./maiorMenor.js"></script>
+		<script src="./ex3_maiormenor.js"></script>
 	</body>
 </html>
