--- a/Aulas/MDC- Aula 2/index.html
+++ b/Aulas/MDC- Aula 2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula 02 MDC data : 01/03/23 </title>
 </head>
 <body>
     <h1>Estruturas de Repetição</h1>
