--- a/Aulas/MDC- Aula 2/index.html
+++ b/Aulas/MDC- Aula 2/index.html
@@ -19,6 +19,7 @@
  </main>
     <span id="result">Resultado:</span>
     
+    <script src="./node copy.js"></script>
 </body>
-<script src="./node.js"></script>
+
 </html>
