--- a/lista03_estruturasRepeticao/ex3_fatorial/index.html
+++ b/lista03_estruturasRepeticao/ex3_fatorial/index.html
@@ -27,6 +27,6 @@
             <input type="button" id="btnCalcular" value="Calcular">
         </main>
 		<span id="result">Resultado: </span>
-		<script src="./ex3_fatorial.js"></script>
+		<script src="./ex_fatorial redu.js"></script>
 	</body>
 </html>
